ncc/testsuite/negative/no-default-ctor.n
public class A
{
  public this (_ : int) { }
}

public class B : A // E: needed 1 parameters, got 0 calling a base class reference
{
  static Main () : void {  }
}
